--- a/css/styles.css
+++ b/css/styles.css
@@ -654,3 +654,191 @@ background: rgba(47, 48, 58, 0.4);
   position: relative;
   background-color: var(--white-color);
 }
+
+/* modal */
+.modal-name {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin: 40px 40px 12px 40px;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 0 40px;
+}
+
+.label-description {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--brown-color);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.form-comment {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    width: 448px;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    padding: 12px 16px;
+    outline: none;
+}
+
+.form-icon {
+    fill: var(--brand-color);
+    position: absolute;
+    bottom: 11px;
+    left: 15px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-description {
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 11px 12px 11px 42px;
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-description:focus-within .form-description {
+    border-color: var(--blue-color);
+}
+
+.label-description:focus-within .form-icon {
+    fill: var(--blue-color);
+}
+
+.label-description:focus-within .form-comment {
+    border-color: var(--blue-color);
+}
+
+.statute {
+    margin-top: 20px;
+}
+
+.statute-info {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+.statute-link {
+    text-decoration: underline;
+    color: var(--blue-color);
+}
+
+.button-statute {
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--white-color);
+    background-color: var(--blue-color);
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    letter-spacing: 0.06em;
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    text-align: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    margin-bottom: 40px;
+    margin-left: 124px;
+    margin-top: 30px;
+    padding: 0;
+}
+
+.statute-form {
+    position: relative;
+}
+
+.checkbox {
+    fill: var(--white-color);
+    border: 2px solid var(--black-color);
+    border-radius: 2px;
+    width: 16px;
+    height: 15px;
+    appearance: none;
+    margin-left: 15px;
+    margin-right: 8px;
+}
+
+.form-icon-check {
+    position: absolute;
+    left: 15px;
+    bottom: 4px;
+    opacity: 0;
+    border-radius: 4px;
+}
+
+.checkbox:checked + .form-icon-check {
+    background-color: var(--blue-color);
+    border-color: var(--blue-color);
+    opacity: 1;
+}
+
+/* footer form fill */
+
+.newsletter-section {
+  margin-left: 78px;
+ 
+}
+.sign-newsletter {
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 14px;
+  padding-top: 12px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.newsletter-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+.email-footer-description {
+width: 358px;
+height: 50px;
+border-radius: 4px;
+border: 1px solid rgba(255, 255, 255, 0.3);
+background-color: var(--grey-color);
+padding-left: 16px;
+font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+}
+.button-footer {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  padding: 10px 28px 10px 42px;
+  background-color: var(--blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 10px;
+  border: 0px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  cursor: pointer;
+}
