--- a/css/styles.css
+++ b/css/styles.css
@@ -580,7 +580,7 @@ background: rgba(47, 48, 58, 0.4);
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
+  max-width: 528px;
   min-height: 581px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
